@startuml
!include ../style.puml
skinparam arrowThickness 1.1

class ParsedCommand MODEL_COLOR {
    - commandWord : String
    - args : Map<String, String>
    + ParsedCommand(commandWord : String, args : Map<String, String>)
    + getCommandWord() : String
    + getArg(key : String) : String
    + hasArg(key : String) : boolean
}

class Parser LOGIC_COLOR_T1 {
    + {static} parse(input : String) : ParsedCommand
}

class CommandRunner LOGIC_COLOR {
    + run(cmd : ParsedCommand) : void
}

Parser ..> ParsedCommand : creates
CommandRunner ..> ParsedCommand : uses

@enduml